dev build server — do not use extra class loader for app (later the same will be done for production runs)
GitOrigin-RevId: dd362dec0764561affd7c9a777b4bbce5c04e215